Fixed spacing.

--- a/styles.css
+++ b/styles.css
@@ -313,6 +313,7 @@ body {
 
     .main {
         width: 100%;
+        margin-bottom: 6rem;
     }
 
     .main__info {
